--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,4 +6,6 @@
 @import 'base/utilities';
 @import 'pages/landing-page';
 @import 'pages/auth';
-@import 'components/cards'
+@import 'components/cards';
+@import 'components/button';
+@import 'components/navbar';
