--- a/src/styles/pages/_auth.scss
+++ b/src/styles/pages/_auth.scss
@@ -19,7 +19,7 @@ form{
         display: block;
         text-align: left;
     } 
-    .form-element input {
+    .form-element input, .form-element textarea  {
         width: 100%;
         border-radius: 5px;
         border: 1px solid #828282;
